Added docker volume for mariadb if not using overall mysql

--- a/roles/gitea/templates/docker-compose.yml.j2
+++ b/roles/gitea/templates/docker-compose.yml.j2
@@ -23,6 +23,8 @@ services:
 #      - MYSQL_USER=gitea
 #      - MYSQL_PASSWORD=changeme
 #    volumes:
-#      - ./db/:/var/lib/mysql
+#      - db/:/var/lib/mysql
 #networks:
+#  db:
+#volumes:
 #  db:
