--- a/roles/gitea/templates/docker-compose.yml.j2
+++ b/roles/gitea/templates/docker-compose.yml.j2
@@ -1,30 +1,14 @@
 version: '2'
 services:
-  web:
-    image: gitea/gitea:1.3.2
-    volumes:
-      - ./data:/data
+  dokuwiki:
+    image: 'bitnami/dokuwiki:latest'
+    labels:
+      kompose.service.type: nodeport
     ports:
-      - "80:3000"
-      - "2222:22"
-    restart: always
-#    networks:
-#      - db
-#    depends_on:
-#      - db
-#  db:
-#    image: mariadb:10
-#    restart: always
-#    networks:
-#      - db
-#    environment:
-#      - MYSQL_ROOT_PASSWORD=changeme
-#      - MYSQL_DATABASE=gitea
-#      - MYSQL_USER=gitea
-#      - MYSQL_PASSWORD=changeme
-#    volumes:
-#      - db/:/var/lib/mysql
-#networks:
-#  db:
-#volumes:
-#  db:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - 'dokuwiki_data:/bitnami'
+volumes:
+  dokuwiki_data:
+    driver: local
