--- a/roles/gitea/templates/docker-compose.yml.j2
+++ b/roles/gitea/templates/docker-compose.yml.j2
@@ -1,14 +1,45 @@
 version: '2'
 services:
-  dokuwiki:
-    image: 'bitnami/dokuwiki:latest'
-    labels:
-      kompose.service.type: nodeport
-    ports:
-      - '80:80'
-      - '443:443'
+  web:
+    image: gitea/gitea:1.3.2
     volumes:
-      - 'dokuwiki_data:/bitnami'
+      - gitea_data:/data
+    ports:
+      - "80:3000"
+      - "2222:22"
+    restart: always
+
 volumes:
-  dokuwiki_data:
+  gitea_data:
+  {% if storage_type == 'nfs' %}
     driver: local
+    driver_opts:
+      type: nfs
+      o: "addr={{ nfs_address }},soft,nolock,rw"
+      device: ":{{ nfs_root_path }}/gitea"
+  {% elif storage_type == 'local' %}
+    driver: local
+  {% endif %}
+
+
+# setup options: https://docs.gitea.io/en-us/config-cheat-sheet/
+#    networks:
+#      - db
+#    depends_on:
+#      - db
+#  db:
+#    image: mariadb:10
+#    restart: always
+#    networks:
+#      - db
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=changeme
+#      - MYSQL_DATABASE=gitea
+#      - MYSQL_USER=gitea
+#      - MYSQL_PASSWORD=changeme
+#    volumes:
+#      - db/:/var/lib/mysql
+#networks:
+#  db:
+#volumes:
+#  db:
